clouddm-utils/cg-detectrule/src/main/java/com/clougence/detectrule/parser/antlr/DetectRulesParser.java
// Generated from DetectRulesParser.g4 by ANTLR 4.9.2
package com.clougence.detectrule.parser.antlr;

import java.util.List;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import com.clougence.detectrule.parser.DetectRulesFeature;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class DetectRulesParser extends DetectRulesBasicParser {

    public static final int                       DEFINE              = 1, DEFAULT = 2, ENUM = 3, HINT = 4, CAST = 5, CEILING = 6, DOWN = 7, FLOOR = 8, HALF_EVEN = 9,
            HALF_DOWN = 10, HALF_UP = 11, UP = 12, UNNECESSARY = 13, BOOL = 14, DATETIME = 15, DATE = 16, DECIMAL = 17, FLOAT = 18, INTEGER = 19, STRING = 20, TIME = 21,
            INSTANCEOF = 22, TYPEOF = 23, LABEL = 24, GOTO = 25, SWITCH = 26, CASE = 27, FOR = 28, CONTINUE = 29, BREAK = 30, VAR = 31, DEF = 32, FUNC = 33, WS = 34, COMMENT1 = 35,
            COMMENT3 = 36, EOL = 37, IF = 38, THEN = 39, ELSEIF = 40, ELSE = 41, END = 42, FALSE = 43, TRUE = 44, NULL = 45, ASSERT = 46, RETURN = 47, THROW = 48, IN = 49,
            MATCHES = 50, NOT = 51, AS = 52, BO_RSHIFT2 = 53, BO_RSHIFT = 54, CO_GE = 55, CO_GT = 56, BO_LSHIFT = 57, CO_LE = 58, CO_LT = 59, CO_IEQ = 60, CO_EQ = 61, CO_NE = 62,
            LO_NOT = 63, LO_AND = 64, BO_AND = 65, LO_OR = 66, BO_OR = 67, BO_NOT = 68, AO_INCR = 69, AO_PLUS = 70, AO_DECR = 71, AO_MINUS = 72, AO_MUL = 73, AO_DIV = 74,
            AO_MOD = 75, BO_XOR = 76, LBT = 77, RBT = 78, LSBT = 79, RSBT = 80, OCBR = 81, CCBR = 82, OREP = 83, WELL = 84, DOT = 85, COLON = 86, COMMA = 87, REF = 88, QUE = 89,
            ASSIGN = 90, PRI_DECIMAL = 91, PRI_FLOAT = 92, PRI_INTEGER = 93, PRI_XOB_NUM = 94, PRI_STR = 95, PRI_DATETIME = 96, PRI_DATETIME_FMT = 97, IDENTIFIER = 98,
            PRI_IDENTIFIER = 99;
    public static final int                       RULE_root           = 0, RULE_comment = 1, RULE_multiStatement = 2, RULE_singleStatement = 3, RULE_defineStatement = 4,
            RULE_defineType = 5, RULE_defineDefault = 6, RULE_defineEnum = 7, RULE_defineHINT = 8, RULE_ifStatement = 9, RULE_conditionThen = 10, RULE_elseifThen = 11,
            RULE_elseThen = 12, RULE_returnStatement = 13, RULE_throwStatement = 14, RULE_assertStatement = 15, RULE_assertExpr = 16, RULE_assignStatement = 17,
            RULE_expression = 18, RULE_unarySymbol = 19, RULE_multiplicativeSymbol = 20, RULE_additiveSymbol = 21, RULE_bitwiseSymbol = 22, RULE_shiftSymbol = 23,
            RULE_compareSymbol = 24, RULE_matchSymbol = 25, RULE_paramExpr = 26, RULE_funOrDetectExpr = 27, RULE_detectPart = 28, RULE_funcPart = 29, RULE_funcArgPart = 30,
            RULE_identifyExpr = 31, RULE_subExpr = 32, RULE_identifyPart = 33, RULE_identify = 34, RULE_anyPrimary = 35, RULE_primitiveValue = 36, RULE_signSymbol = 37,
            RULE_numValue = 38, RULE_dtValue = 39, RULE_collectionValue = 40, RULE_listValue = 41, RULE_objectValue = 42, RULE_objectItem = 43, RULE_castExpr = 44,
            RULE_dataType = 45, RULE_numFmtValue = 46, RULE_numFmtRounding = 47, RULE_allIdentifierKeywords = 48;
    public static final String[] ruleNames = makeRuleNames();
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[]   tokenNames;
    public static final ATN    _ATN           = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
    protected static final DFA[]                  _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
    private static final String[] _LITERAL_NAMES = makeLiteralNames();
    private static final String[]  _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY      = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    static {
        RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION);
    }

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }

    public DetectRulesParser(TokenStream input, List<DetectRulesFeature> features){
        this(input);
        super.initFeatures(features);
    }

    public DetectRulesParser(TokenStream input){
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    private static String[] makeRuleNames() {
        return new String[] { "root", "comment", "multiStatement", "singleStatement", "defineStatement", "defineType", "defineDefault", "defineEnum", "defineHINT", "ifStatement",
                              "conditionThen", "elseifThen", "elseThen", "returnStatement", "throwStatement", "assertStatement", "assertExpr", "assignStatement", "expression",
                              "unarySymbol", "multiplicativeSymbol", "additiveSymbol", "bitwiseSymbol", "shiftSymbol", "compareSymbol", "matchSymbol", "paramExpr",
                              "funOrDetectExpr", "detectPart", "funcPart", "funcArgPart", "identifyExpr", "subExpr", "identifyPart", "identify", "anyPrimary", "primitiveValue",
                              "signSymbol", "numValue", "dtValue", "collectionValue", "listValue", "objectValue", "objectItem", "castExpr", "dataType", "numFmtValue",
                              "numFmtRounding", "allIdentifierKeywords" };
    }

    private static String[] makeLiteralNames() {
        return new String[] { null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                              null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null,
                              null, null, null, "'>>>'", "'>>'", "'>='", "'>'", "'<<'", "'<='", "'<'", "'==='", "'=='", "'!='", "'!'", "'&&'", "'&'", "'||'", "'|'", "'~'", "'++'",
                              "'+'", "'--'", "'-'", "'*'", "'/'", "'%'", "'^'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'#{'", "'#'", "'.'", "':'", "','", "'@'", "'?'", "'='" };
    }

    private static String[] makeSymbolicNames() {
        return new String[] { null, "DEFINE", "DEFAULT", "ENUM", "HINT", "CAST", "CEILING", "DOWN", "FLOOR", "HALF_EVEN", "HALF_DOWN", "HALF_UP", "UP", "UNNECESSARY", "BOOL",
                              "DATETIME", "DATE", "DECIMAL", "FLOAT", "INTEGER", "STRING", "TIME", "INSTANCEOF", "TYPEOF", "LABEL", "GOTO", "SWITCH", "CASE", "FOR", "CONTINUE",
                              "BREAK", "VAR", "DEF", "FUNC", "WS", "COMMENT1", "COMMENT3", "EOL", "IF", "THEN", "ELSEIF", "ELSE", "END", "FALSE", "TRUE", "NULL", "ASSERT",
                              "RETURN", "THROW", "IN", "MATCHES", "NOT", "AS", "BO_RSHIFT2", "BO_RSHIFT", "CO_GE", "CO_GT", "BO_LSHIFT", "CO_LE", "CO_LT", "CO_IEQ", "CO_EQ",
                              "CO_NE", "LO_NOT", "LO_AND", "BO_AND", "LO_OR", "BO_OR", "BO_NOT", "AO_INCR", "AO_PLUS", "AO_DECR", "AO_MINUS", "AO_MUL", "AO_DIV", "AO_MOD",
                              "BO_XOR", "LBT", "RBT", "LSBT", "RSBT", "OCBR", "CCBR", "OREP", "WELL", "DOT", "COLON", "COMMA", "REF", "QUE", "ASSIGN", "PRI_DECIMAL", "PRI_FLOAT",
                              "PRI_INTEGER", "PRI_XOB_NUM", "PRI_STR", "PRI_DATETIME", "PRI_DATETIME_FMT", "IDENTIFIER", "PRI_IDENTIFIER" };
    }

    @Override
    @Deprecated
    public String[] getTokenNames() { return tokenNames; }

    @Override

    public Vocabulary getVocabulary() { return VOCABULARY; }

    @Override
    public String getGrammarFileName() { return "DetectRulesParser.g4"; }

    @Override
    public String[] getRuleNames() { return ruleNames; }

    @Override
    public String getSerializedATN() { return _serializedATN; }

    @Override
    public ATN getATN() { return _ATN; }

    public final RootContext root() throws RecognitionException {
        RootContext _localctx = new RootContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_root);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(101);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == WELL) {
                    {
                        {
                            setState(98);
                            defineStatement();
                        }
                    }
                    setState(103);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(105);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (((((_la - 38)) & ~0x3f) == 0
                     && ((1L << (_la - 38)) & ((1L << (IF - 38)) | (1L << (ASSERT - 38)) | (1L << (RETURN - 38)) | (1L << (THROW - 38)) | (1L << (IDENTIFIER - 38)))) != 0)) {
                    {
                        setState(104);
                        multiStatement();
                    }
                }

                setState(107);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final CommentContext comment() throws RecognitionException {
        CommentContext _localctx = new CommentContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_comment);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(109);
                _la = _input.LA(1);
                if (!(_la == COMMENT1 || _la == COMMENT3)) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF)
                        matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final MultiStatementContext multiStatement() throws RecognitionException {
        MultiStatementContext _localctx = new MultiStatementContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_multiStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(112);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(111);
                            singleStatement();
                        }
                    }
                    setState(114);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while (((((_la - 38)) & ~0x3f) == 0
                          && ((1L << (_la - 38)) & ((1L << (IF - 38)) | (1L << (ASSERT - 38)) | (1L << (RETURN - 38)) | (1L << (THROW - 38)) | (1L << (IDENTIFIER - 38)))) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final SingleStatementContext singleStatement() throws RecognitionException {
        SingleStatementContext _localctx = new SingleStatementContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_singleStatement);
        try {
            setState(121);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case IF:
                    enterOuterAlt(_localctx, 1); {
                    setState(116);
                    ifStatement();
                }
                    break;
                case RETURN:
                    enterOuterAlt(_localctx, 2); {
                    setState(117);
                    returnStatement();
                }
                    break;
                case THROW:
                    enterOuterAlt(_localctx, 3); {
                    setState(118);
                    throwStatement();
                }
                    break;
                case ASSERT:
                    enterOuterAlt(_localctx, 4); {
                    setState(119);
                    assertStatement();
                }
                    break;
                case IDENTIFIER:
                    enterOuterAlt(_localctx, 5); {
                    setState(120);
                    assignStatement();
                }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefineStatementContext defineStatement() throws RecognitionException {
        DefineStatementContext _localctx = new DefineStatementContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_defineStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(123);
                match(WELL);
                setState(124);
                match(DEFINE);
                setState(125);
                match(PRI_STR);
                setState(128);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == AS) {
                    {
                        setState(126);
                        match(AS);
                        setState(127);
                        defineType();
                    }
                }

                setState(131);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == DEFAULT) {
                    {
                        setState(130);
                        defineDefault();
                    }
                }

                setState(134);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ENUM) {
                    {
                        setState(133);
                        defineEnum();
                    }
                }

                setState(137);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == HINT) {
                    {
                        setState(136);
                        defineHINT();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefineTypeContext defineType() throws RecognitionException {
        DefineTypeContext _localctx = new DefineTypeContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_defineType);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(139);
                _la = _input.LA(1);
                if (!((((_la) & ~0x3f) == 0
                       && ((1L << _la)
                           & ((1L << BOOL) | (1L << DATETIME) | (1L << DATE) | (1L << DECIMAL) | (1L << FLOAT) | (1L << INTEGER) | (1L << STRING) | (1L << TIME))) != 0))) {
                    _errHandler.recoverInline(this);
                } else {
                    if (_input.LA(1) == Token.EOF)
                        matchedEOF = true;
                    _errHandler.reportMatch(this);
                    consume();
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefineDefaultContext defineDefault() throws RecognitionException {
        DefineDefaultContext _localctx = new DefineDefaultContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_defineDefault);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(141);
                match(DEFAULT);
                setState(142);
                match(PRI_STR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefineEnumContext defineEnum() throws RecognitionException {
        DefineEnumContext _localctx = new DefineEnumContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_defineEnum);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(144);
                match(ENUM);
                setState(145);
                match(LSBT);
                setState(154);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == PRI_STR) {
                    {
                        setState(146);
                        match(PRI_STR);
                        setState(151);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(147);
                                    match(COMMA);
                                    setState(148);
                                    match(PRI_STR);
                                }
                            }
                            setState(153);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                    }
                }

                setState(156);
                match(RSBT);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final DefineHINTContext defineHINT() throws RecognitionException {
        DefineHINTContext _localctx = new DefineHINTContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_defineHINT);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(158);
                match(HINT);
                setState(159);
                match(PRI_STR);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final IfStatementContext ifStatement() throws RecognitionException {
        IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
        enterRule(_localctx, 18, RULE_ifStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(161);
                conditionThen();
                setState(165);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == ELSEIF) {
                    {
                        {
                            setState(162);
                            elseifThen();
                        }
                    }
                    setState(167);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(169);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == ELSE) {
                    {
                        setState(168);
                        elseThen();
                    }
                }

                setState(171);
                match(END);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ConditionThenContext conditionThen() throws RecognitionException {
        ConditionThenContext _localctx = new ConditionThenContext(_ctx, getState());
        enterRule(_localctx, 20, RULE_conditionThen);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(173);
                match(IF);
                setState(174);
                expression(0);
                setState(175);
                match(THEN);
                setState(177);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (((((_la - 38)) & ~0x3f) == 0
                     && ((1L << (_la - 38)) & ((1L << (IF - 38)) | (1L << (ASSERT - 38)) | (1L << (RETURN - 38)) | (1L << (THROW - 38)) | (1L << (IDENTIFIER - 38)))) != 0)) {
                    {
                        setState(176);
                        multiStatement();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ElseifThenContext elseifThen() throws RecognitionException {
        ElseifThenContext _localctx = new ElseifThenContext(_ctx, getState());
        enterRule(_localctx, 22, RULE_elseifThen);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(179);
                match(ELSEIF);
                setState(180);
                expression(0);
                setState(181);
                match(THEN);
                setState(183);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (((((_la - 38)) & ~0x3f) == 0
                     && ((1L << (_la - 38)) & ((1L << (IF - 38)) | (1L << (ASSERT - 38)) | (1L << (RETURN - 38)) | (1L << (THROW - 38)) | (1L << (IDENTIFIER - 38)))) != 0)) {
                    {
                        setState(182);
                        multiStatement();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ElseThenContext elseThen() throws RecognitionException {
        ElseThenContext _localctx = new ElseThenContext(_ctx, getState());
        enterRule(_localctx, 24, RULE_elseThen);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(185);
                match(ELSE);
                setState(187);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (((((_la - 38)) & ~0x3f) == 0
                     && ((1L << (_la - 38)) & ((1L << (IF - 38)) | (1L << (ASSERT - 38)) | (1L << (RETURN - 38)) | (1L << (THROW - 38)) | (1L << (IDENTIFIER - 38)))) != 0)) {
                    {
                        setState(186);
                        multiStatement();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ReturnStatementContext returnStatement() throws RecognitionException {
        ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
        enterRule(_localctx, 26, RULE_returnStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(189);
                match(RETURN);
                setState(191);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 15, _ctx)) {
                    case 1: {
                        setState(190);
                        expression(0);
                    }
                        break;
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ThrowStatementContext throwStatement() throws RecognitionException {
        ThrowStatementContext _localctx = new ThrowStatementContext(_ctx, getState());
        enterRule(_localctx, 28, RULE_throwStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(193);
                match(THROW);
                setState(194);
                expression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssertStatementContext assertStatement() throws RecognitionException {
        AssertStatementContext _localctx = new AssertStatementContext(_ctx, getState());
        enterRule(_localctx, 30, RULE_assertStatement);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(196);
                match(ASSERT);
                setState(197);
                expression(0);
                setState(199);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == COMMA) {
                    {
                        setState(198);
                        assertExpr();
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssertExprContext assertExpr() throws RecognitionException {
        AssertExprContext _localctx = new AssertExprContext(_ctx, getState());
        enterRule(_localctx, 32, RULE_assertExpr);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(201);
                match(COMMA);
                setState(202);
                expression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final AssignStatementContext assignStatement() throws RecognitionException {
        AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
        enterRule(_localctx, 34, RULE_assignStatement);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(204);
                match(IDENTIFIER);
                setState(205);
                match(ASSIGN);
                setState(206);
                expression(0);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public final ExpressionContext expression() throws RecognitionException {
        return expression(0);
    }

    private ExpressionContext expression(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
        ExpressionContext _prevctx = _localctx;
        int _startState = 36;
        enterRecursionRule(_localctx, 36, RULE_expression, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(225);
                _errHandler.sync(this);
                switch (getInterpreter().adaptivePredict(_input, 17, _ctx)) {
                    case 1: {
                        _localctx = new AtomExprContext(_localctx);
                        _ctx = _localctx;
                        _prevctx = _localctx;
